Update to intellij gradle platform plugin version 2.0.0